# parallel-ai-mcp

./: .env.example  README.md  pyproject.toml
src/: __init__.py  _client.py  client.py  server.py
src/parallel/: __init__.py  tools.py  types.py
tests/: conftest.py  test_connection_live.py  test_tools.py
